Pull #19888: Resolve modernizer violations after modernizer-maven-plugin 3.4.0 bump